<resources>
    <string name="app_name">MovieSearch</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="rating">Рейтинг IMDB:</string>
    <string name="year">Год:</string>
    <string name="country">Страна:</string>
    <string name="genre">Жанр:</string>
    <string name="director">Режиссер:</string>
    <string name="screenwriter">Сценарист:</string>
    <string name="casting">В ролях:</string>
    <string name="plot">Сюжет:</string>
    <string name="directors">Directors</string>
    <string name="screenwriters">Screenwriters</string>
    <string name="actors">Actors</string>
    <string name="show_cast">Show cast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imdb_text">IMDB Movies Search</string>
    <string name="imdb_version">Version 1.0\nDeveloper: Ilya Chernov</string>
    <string name="movies">Movies</string>
    <string name="names">Persons</string>
    <string name="info">Info</string>
</resources>