<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.details.AboutFragment">

    <TextView
        android:id="@+id/error"
        style="@style/NormalDetailsStyle"
        android:layout_margin="16dp"
        android:textSize="30sp"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/title"
            style="@style/BoldDetailsStyle"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="20dp"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/vertical_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="rating, year, country, genre, director, screenwriter, casting" />

        <TextView
            android:id="@+id/rating"
            style="@style/NormalDetailsStyle"
            android:text="@string/rating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintTop_toTopOf="@id/movie_rating"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/year"
            style="@style/NormalDetailsStyle"
            android:text="@string/year"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rating"
            app:layout_constraintTop_toTopOf="@id/movie_year" />

        <TextView
            android:id="@+id/country"
            style="@style/NormalDetailsStyle"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/year"
            app:layout_constraintTop_toTopOf="@id/movie_country" />

        <TextView
            android:id="@+id/genre"
            style="@style/NormalDetailsStyle"
            android:text="@string/genre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/country"
            app:layout_constraintTop_toTopOf="@id/movie_genre" />

        <TextView
            android:id="@+id/director"
            style="@style/NormalDetailsStyle"
            android:text="@string/director"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genre"
            app:layout_constraintTop_toTopOf="@id/movie_director" />

        <TextView
            android:id="@+id/screenwriter"
            style="@style/NormalDetailsStyle"
            android:text="@string/screenwriter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/director"
            app:layout_constraintTop_toTopOf="@id/movie_screenwriter" />

        <TextView
            android:id="@+id/casting"
            style="@style/NormalDetailsStyle"
            android:text="@string/casting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/screenwriter"
            app:layout_constraintTop_toTopOf="@id/movie_casting" />

        <TextView
            android:id="@+id/movie_rating"
            style="@style/BoldDetailsStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/vertical_barrier"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/movie_year"
            style="@style/BoldDetailsStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/vertical_barrier"
            app:layout_constraintTop_toBottomOf="@id/movie_rating" />

        <TextView
            android:id="@+id/movie_country"
            style="@style/BoldDetailsStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/vertical_barrier"
            app:layout_constraintTop_toBottomOf="@id/movie_year" />

        <TextView
            android:id="@+id/movie_genre"
            style="@style/BoldDetailsStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/vertical_barrier"
            app:layout_constraintTop_toBottomOf="@id/movie_country" />

        <TextView
            android:id="@+id/movie_director"
            style="@style/BoldDetailsStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/vertical_barrier"
            app:layout_constraintTop_toBottomOf="@id/movie_genre" />

        <TextView
            android:id="@+id/movie_screenwriter"
            style="@style/BoldDetailsStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/vertical_barrier"
            app:layout_constraintTop_toBottomOf="@id/movie_director" />

        <TextView
            android:id="@+id/movie_casting"
            style="@style/BoldDetailsStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/vertical_barrier"
            app:layout_constraintTop_toBottomOf="@id/movie_screenwriter" />

        <TextView
            android:id="@+id/plot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/plot"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/casting" />

        <TextView
            android:id="@+id/movie_plot"
            style="@style/BoldDetailsStyle"
            android:layout_marginStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/plot" />

        <Button
            android:id="@+id/show_cast_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_cast"
            app:layout_constraintTop_toBottomOf="@id/movie_plot"
            app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
